@@ -10,6 +10,7 @@ lots=lots
 molarity=Molarity
 none=none
 saturated=Saturated!
+showValues=Show values
 solute=Solute
 soluteAmount=<html><center>Solute<br>Amount<br>(moles)</html>
 solutionConcentration=<html><center>Solution<br>Concentration<br>(Molarity)</html>
